# shiftspace

./: .bumpversion.cfg  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  pyproject.toml  pyvenv.cfg  tasks.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
shift/: __init__.py  shift.py
shiftspace/: __init__.py  cli.py  main.py
tests/: __init__.py  test_shift.py
